# homekit_pc_switch

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  build.rs  erase.sh  flash.sh  homekit_pc_switch.ino  pc_pwr_button.h  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
components/pc_homekit/: CMakeLists.txt  Kconfig.projbuild  pc_homekit.c
components/pc_homekit/include/: pc_homekit.h
script/: generate_qr.py  show_homekit_pc_switch_qr.sh
src/: ffi.rs  lib.rs  pins.rs
